@@ -872,6 +872,9 @@ repl call, 0x51DC54,	0x527A41,	0x51DCF4,	"PCX_Image_process_dom_adv_turn_count_t
 define,	   0x4B1205,	0x4B81B5,	0x4B1295,	"ADDR_CORRUPTION_CAPITAL_CHECK",		"byte *"
 define,	   0x4B12C0,	0x4B8272,	0x4B1350,	"ADDR_ADD_CAPITAL_CORRUPTION_BUILDING_EFFECT",	"byte *"
 define,	   0xCCF76C,	0xCF1DC4,	0xCCF724,	"p_code_page",					"unsigned *"
+define,	   0x4ED5F0,	0x4F6520,	0x4ED6B0,	"MenuUnitList_get_length",			"int (__fastcall *) (MenuUnitList * this)"
+repl call, 0x4E8BD4,	0x4F1895,	0x4E8C94,	"MenuUnitList_get_length_before_sorting",	""
+define,	   0x4E7E00,	0x4F08C0,	0x4E7EC0,	"MenuUnitItem_should_appear_after",		"bool (__fastcall *) (MenuUnitItem * this, int edx, MenuUnitItem * other)"
 
 ignore,	   0x5FC710,	0x0,		0x0,		"PCX_Image_create_and_init_jgl_image",		"int (__fastcall *) (PCX_Image * this, int edx, int width, int height, int bit_depth, int param_4, int param_5, int param_6)"
 ignore,	   0x5FCC50,	0x0,		0x0,		"PCX_Image_draw_region_to_location",		"void (__fastcall *) (PCX_Image * this, int edx, PCX_Image * canvas, int src_x, int src_y, int dest_x, int dest_y, int width, int height)"
