@@ -316,6 +316,10 @@ ai_worker_requirement_percent = 150
 ; the search fails to find anything, there will be no default option, the dropdown selector will not be initialized, and the game will crash when it
 ; tries to open the popup. To fix this, the mod detects when the game has failed to find a new build option and fills in Wealth instead or, failing
 ; that, any unit or improvement that the city can build.
+;   PASSENGERS OUT OF ORDER ON MENU -- When there are multiple doubly-contained units (meaning units contained in other units that are themselves
+; contained in something, like a unit in an army on a transport) on a tile, the game will not always show the passenger units in the correct locations
+; on the right-click menu. To fix this, the mod double checks the order of the entries on the menu to make sure that passenger units are listed just
+; after the unit they're contained in.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -335,6 +339,7 @@ patch_ai_can_sacrifice_without_special_ability = true
 patch_ai_can_form_army_without_special_ability = true
 patch_crash_in_leader_unit_ai = true
 patch_failure_to_find_new_city_build = true
+patch_passengers_out_of_order_on_menu = true
 
 ; At the beginning of each AI player's turn, deletes any units of theirs that are not on a valid tile. This addresses a rare crash that can occur when
 ; the unit AI invokes the pathfinder for an off-map unit. I don't know how AI units can end up off the map in the first place.
